pushed to docker hub

--- a/docker/Dockerfile.websocket
+++ b/docker/Dockerfile.websocket
@@ -11,8 +11,8 @@ COPY ./turbo.json    ./turbo.json
 COPY ./apps/websocket ./apps/websocket
 
 RUN bun install
-RUN bun run db:migrate
+RUN bun run db:generate
 
-EXPOSE 8080
+EXPOSE 8081
 
 CMD ["bun","run","start:websocket"]
