--- a/docker/Dockerfile.frontend
+++ b/docker/Dockerfile.frontend
@@ -2,18 +2,19 @@ FROM oven/bun:1
 
 WORKDIR /usr/src/app
 
+ARG DATABASE_URL
 COPY ./packages ./packages
 COPY ./bun.lock ./bun.lock
 
 COPY ./package.json  ./package.json
 COPY ./turbo.json    ./turbo.json
 
-COPY ./apps/web ./apps/websocket
+COPY ./apps/web ./apps/web
 
 RUN bun install
-RUN bun run db:migrate
-RUN bun run build
+RUN bun run db:generate
+RUN DATABASE_URL=${DATABASE_URL} bun run build
 
-EXPOSE 8080
+EXPOSE 3000
 
 CMD ["bun","run","start:web"]
